16 June 2025: Wouter
	- Fix to check control-interface addresses in unbound-checkconf.

12 June 2025: Wouter
	- Fix header return value description for skip_pkt_rrs and
	  parse_edns_from_query_pkt.

11 June 2025: Wouter
	- Fix bitwise operators in conditional expressions with parentheses.
	- Fix conditional expressions with parentheses for bitwise and.

5 June 2025: Wouter
	- Fix unbound-anchor certificate file read for line ends and end of
	  file.
	- Fix comment for the dname_remove_label_limit_len function.
	- iana portlist updated.

3 June 2025: Yorgos
	- Small manpage corrections for the 'disable-dnssec-lame-check' option.

21 May 2025: Wouter
	- Fix #1288: [FR] Improve fuzzing of unbound by adapting the netbound
	  program.

20 May 2025: Yorgos
	- Merge #1285:  RST man pages. It introduces restructuredText man pages
	  to sync the online and source code man page documentation.
	  The templated man pages (*.in) are still part of the repo but
	  generated with docutils from their .rst counterpart.
	  Documentation on how to generate those (mainly for core developers)
	  is in README.man.
	- Add more checks about respip in unbound-checkconf.
	  Also fixes #310: unbound-checkconf not reporting RPZ configuration
	  error.

19 May 2025: Wouter
	- Fix for cname chain length with qtype ANY and qname minimisation.
	  Thanks to Jim Greenwood from Nominet for the report.

15 May 2025: Wouter
	- Fix config of slab values when there is no config file.

13 May 2025: Yorgos
	- Fix #1284: NULL pointer deref in az_find_nsec_cover() (latent bug)
	  by adding a log_assert() to safeguard future development.
	- Fix #1282: log-destaddr fail on long ipv6 addresses.

13 May 2025: Wouter
	- Change default for so-sndbuf to 1m, to mitigate a cross-layer
	  issue where the UDP socket send buffers are exhausted waiting
	  for ARP/NDP resolution. Thanks to Reflyable for the report.
	- Adjusted so-sndbuf default to 4m.

12 May 2025: Yorgos