@@ -1,5 +1,7 @@
 16 June 2025: Wouter
 	- Fix to check control-interface addresses in unbound-checkconf.
+	- Fix #1295: Windows 32-bit binaries download seems to be missing dll
+	  dependency.
 
 12 June 2025: Wouter
 	- Fix header return value description for skip_pkt_rrs and
